--- a/FrontEnd/styles.css
+++ b/FrontEnd/styles.css
@@ -1,3 +1,18 @@
+
 .completed {
-  color: lightgreen;
+  color: rgb(148, 204, 148);
+  opacity: 0.6;
+}
+
+.container {
+  border: 1px solid black;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 14px;
+  margin: 100px auto;
+  max-width: 500px;
+  padding: 10px;
+}
+
+h1 {
+  text-align: center;
 }
